services/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Kuala_Lumpur
        - name: WEBPASSWORD
          valueFrom:
            secretKeyRef:
              name: pihole-secret
              key: webpassword
        - name: PIHOLE_DNS_
          value: 1.1.1.1;8.8.8.8
        - name: DNSSEC
          value: 'true'
        - name: CONDITIONAL_FORWARDING
          value: 'false'
        - name: DNSMASQ_LISTENING
          value: all
        image: pihole/pihole:latest
        imagePullPolicy: Always
        name: pihole
        ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_BIND_SERVICE
            - CHOWN
            - SETGID
            - SETUID
            - DAC_OVERRIDE
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-config
        - mountPath: /etc/dnsmasq.d
          name: pihole-dnsmasq
      dnsPolicy: Default
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pihole-config
        persistentVolumeClaim:
          claimName: pihole-config
      - name: pihole-dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq
