services/pihole/pihole-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-exporter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-exporter
  template:
    metadata:
      labels:
        app: pihole-exporter
    spec:
      containers:
      - name: exporter
        image: python:3-alpine
        command: ["python3", "/exporter/exporter.py"]
        ports:
        - containerPort: 9617
          protocol: TCP
          name: metrics
        volumeMounts:
        - name: script
          mountPath: /exporter
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
      volumes:
      - name: script
        configMap:
          name: pihole-exporter-script
          defaultMode: 0755
