services/pihole/service-pihole-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-exporter
  namespace: default
  labels:
    app: pihole-exporter
spec:
  ports:
  - port: 9617
    protocol: TCP
    targetPort: 9617
    name: metrics
  selector:
    app: pihole-exporter
  type: ClusterIP
